Use `List#of` and `Map#of` where possible